# skysentinel-backend

./: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh  test_oauth2_rate_limit.py  test_rate_limits.py
app/: __init__.py  main.py  main_backup.py  oauth2_client.py
scripts/: check_fastmcp_compatibility.py
src/: __init__.py
src/agents/: __init__.py  message_bus.py
src/api/: __init__.py  mcp_endpoints.py  session_manager.py
src/mcp_server/: __init__.py  mcp_adapter.py  server.py  tool_injector.py
src/skills/: __init__.py  registry.py
